--- a/.htaccess
+++ b/.htaccess
@@ -19,4 +19,5 @@
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
     RewriteRule ^views/ = [F,L]
+    RewriteRule ^model/ = [F,L]
 </IfModule>
